@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-18T02:23:52Z",
-  "count_outdated" : 5696,
-  "uniques_outdated" : 1138,
+  "timestamp" : "2025-07-20T02:32:43Z",
+  "count_outdated" : 5697,
+  "uniques_outdated" : 1139,
   "count" : 5708,
   "uniques" : 1145,
   "views" : [
-    {
-      "timestamp": "2025-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-12T00:00:00Z",
       "count": 4,
