@@ -1,12 +1,7 @@
 {
-  "count": 12,
+  "count": 11,
   "uniques": 6,
   "views": [
-    {
-      "timestamp": "2025-07-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-12T00:00:00Z",
       "count": 4,
